Add institutional pilot packaging
